<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    app:cardCornerRadius="16dp"
    android:layout_marginBottom="@dimen/small_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlue">

        <TextView
            android:id="@+id/currencyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/currencyName"
            android:textSize="@dimen/currency_text_size"
            app:layout_constraintEnd_toStartOf="@id/currencyValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/currencyValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/value"
            android:textSize="@dimen/currency_text_size"
            app:layout_constraintBottom_toTopOf="@+id/currencyCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/currencyName"
            app:layout_constraintTop_toTopOf="@id/currencyName" />

        <TextView
            android:id="@+id/currencyCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/code"
            android:textSize="@dimen/currency_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/currencyName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/currencyName"
            app:layout_constraintTop_toBottomOf="@id/currencyValue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
